# timetable-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 8feb86b963ca_create_schedules_table.py  b9cabae99fca_init.py  cb126588fae3_add_timezone_support_to_schedule_.py
app/: main.py
app/api/: __init__.py  schedules.py
app/core/: config.py
app/db/: dependencies.py  session.py
app/models/: __init__.py  schedule.py
app/schemas/: __init__.py  schedule.py
app/services/: schedule.py  schedule_calculator.py
tests/: test_alembic.py  test_config.py  test_health.py  test_schedule_api.py  test_schedule_calculator.py  test_schedule_model.py  test_schedule_next.py  test_schedule_schema.py
