[project]
name = "timetable-api"
version = "0.1.0"
description = "API service for medicine intake scheduling"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "B008",
]


[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["F401", "I001", "UP035", "UP007"]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.mypy]
python_version = "3.12"
strict = true
plugins = [
    "pydantic.mypy",
]
